--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
       <meta name="keywords" content="sewaqq, pkv, pkv games, poker qq, pkv games winrate tertinggi">
       <meta name="robots" content="index, follow" />
       <meta name="theme-color" content="">
-      <link rel="canonical" href="http://iwnweb.com/">
+      <link rel="canonical" href="https://iwnweb.com/">
       <link rel="amphtml" href="https://sewaqq.pages.dev/">
       <link rel="icon" type="image/png" href="//s12.gifyu.com/images/SaOOc.jpg?crop=center&height=32&v=1706666605&width=32">
       <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
@@ -20,7 +20,7 @@
       </title>
       <meta name="description" content="SewaQQ memiliki pkv games winrate tertinggi dengan judi online taruhan permainan poker qq pkv resmi terpercaya gampang menang ratusan juta hari ini. ">
       <meta property="og:site_name" content="SewaQQ">
-      <meta property="og:url" content="http://iwnweb.com/">
+      <meta property="og:url" content="https://iwnweb.com/">
       <meta property="og:title" content="SewaQQ | Situs Resmi Judi Poker QQ PKV Games Winrate Tertinggi">
       <meta property="og:type" content="product">
       <meta property="og:description" content="SewaQQ memiliki pkv games winrate tertinggi dengan judi online taruhan permainan poker qq pkv resmi terpercaya gampang menang ratusan juta hari ini. ">
